fix: adiciona correção a pipeline de testes substituindo List por Array e correção do metodsacar na entidade conta corrente